[tool.poetry]
name = "punctualbe"
version = "0.1.0"
description = ""
authors = ["yoohyunk <yoohyunk20@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
flask = ">=3.1.2,<4.0.0"
flask-sqlalchemy = ">=3.1.1,<4.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
googlemaps = ">=4.10.0,<5.0.0"
twilio = ">=9.0.0,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
